<resources>
    <string name="app_name">SnP</string>


    /* Main_Menu */
    <string name="register_or_login">Login</string>
    <string name="setting">Settings</string>
    <string name="join_party">Join Party</string>
    <string name="create_party">Create Party</string>

    /* Login */
    <string name="text_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">PassWord</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Comfirm PassWord</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_email2">Enter Valid Email2</string>
    <string name="error_message_email3">Enter Valid Email3</string>
    <string name="error_valid_email_password">Wrong Email or PassWord</string>
    <string name="error_message_password">Entrer PassWord</string>
    <string name="error_password_match">PassWord Does Not Matches</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="text_not_member">No account yet ? Create one</string>

    /* */
    <string name="paireddevices">paired devices</string>
    <string name="start">start</string>
    <string name="title_activity_select_pairing">SelectPairingActivity</string>
    <string name="paired_with_nfc">Paired with NFC</string>
    <string name="paired_manualy">paired manualy</string>
    <string name="title_activity_test">activity test</string>
    <string name="write_message">Write a message: </string>
    <string name="write">Write</string>
    <string name="message">message</string>
    <string name="looking">looking for a nfc tag...</string>

</resources>
